# image_classifier

./: .gitignore  README.md  main.py  pyproject.toml  train.py
templates/: index.html
